<resources>
    <string name="host">HOST A GAME</string>
    <string name="join">JOIN A GAME</string>
    <string name="quit">QUIT</string>
    <string name="app_name">LazAR</string>
    <string name="capture">capture</string>
    <string name="preview_area">preview_area</string>
    <string name="loss_image">Gravestone</string>
    <string name="sky_background">Win screen background</string>
    <string name="win_image">Trophy</string>
    <string name="exit_end_screen">E X I T</string>
    <string name="storm_clouds_background">Storm clouds background</string>
    <string name="FIRE">F I R E</string>
    <string name="ZOOM">ZOOM</string>
    <string name="debug_capture_desc">Image with bounding boxes around humans</string>
</resources>