<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000" >

    <ProgressBar
        android:id="@+id/healthBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/healthbar_h"
        android:min="0"
        android:max="100"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#FF000000"
        app:layout_constraintBottom_toTopOf="@id/fireButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/healthBar" >

        <androidx.camera.view.PreviewView
            android:id="@+id/camera"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/preview_area"
            android:importantForAccessibility="no" >
        </androidx.camera.view.PreviewView>

        <ImageView
            android:id="@+id/crosshair"
            android:layout_width="@dimen/crosshair_h"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/capture"
            android:src="@drawable/crosshair" />
    </RelativeLayout>

    <Button
        android:id="@+id/fireButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FIRE"
        android:textSize="@dimen/FIRE_size"
        android:onClick="fireLazar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/zoomButton" />

    <Button
        android:id="@+id/zoomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ZOOM"
        android:textSize="@dimen/ZOOM_size"
        android:onClick="zoomInCamera"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/debugData"/>

    <ImageView
        android:id="@+id/skyBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:src="@drawable/sky"
        android:contentDescription="@string/sky_background"/>

    <ImageView
        android:id="@+id/winScreen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/trophy_h"
        android:contentDescription="@string/win_image"
        android:src="@drawable/trophy"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fireButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/stormBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:src="@drawable/stormclouds"
        android:contentDescription="@string/storm_clouds_background"/>

    <ImageView
        android:id="@+id/lossScreen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/grave_h"
        android:contentDescription="@string/loss_image"
        android:src="@drawable/gravestone"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/exitButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/fireButton"
        android:layout_height="wrap_content"
        android:text="@string/exit_end_screen"
        android:textSize="@dimen/EXIT_size"
        android:onClick="returnHome"
        android:visibility="gone"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/debugData"
        android:layout_width="match_parent"
        android:layout_height="@dimen/debug_h"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/capture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/debug_capture_h"
            android:contentDescription="@string/debug_capture_desc"/>
        <TextView
            android:id="@+id/latView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/latitude_h"/>
        <TextView
            android:id="@+id/longView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/longitude_h"/>
        <TextView
            android:id="@+id/bearView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bearing_h"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>