<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/hex_background"
    android:orientation="vertical">

    <!-- Connection Indicator -->
    <TextView
        android:id="@+id/serverConnection"
        android:text="Loading..."
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end" />

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/hostButton"
            android:onClick="hostGame"
            style="@style/ButtonHome"
            android:text="@string/host" />
        <Button
            android:id="@+id/joinButton"
            android:onClick="joinGame"
            style="@style/ButtonHome"
            android:text="@string/join" />
        <Button
            android:id="@+id/exit"
            android:onClick="onDestroy"
            android:text="@string/quit"
            style="@style/ButtonHome" />
    </LinearLayout>

</LinearLayout>